# ms-toollib

./: .gitignore  CONTRIBUTING.md  LICENSE  README.en.md  README.md  board标准.md  evf format (evf标准).md  evfs format (evfs标准).md  evfs标准.md  evf标准.md  release.py
.github/: dependabot.yml
.github/workflows/: CI.yml  npm_CI.yml
base/: Cargo.toml  readme.md
base/benches/: lay_mine.rs  refresh_matrix.rs  refresh_matrix_all.rs  sample_boards.rs  utils_bench.rs
base/src/: OBR.rs  algorithms.rs  analyse_methods.rs  big_number.rs  binomial.rs  board.rs  evfs.rs  lib.rs  miscellaneous.rs  obr.rs  probability_engine.rs  safe_board.rs  tile.rs  utils.rs  zini.rs
base/src/videos/: analyse_methods.rs  avf_video.rs  base_video.rs  base_video_generate_evf.rs  base_video_metrics.rs  byte_reader.rs  evf_video.rs  minesweeper_board.rs  mod.rs  mvf_video.rs  rmv_video.rs  types.rs
base/tests/: test_analyse.rs  test_engines.rs  test_evfs.rs  test_getmatrix.rs  test_laymine.rs  test_play_video.rs  test_pluck.rs  test_probability.rs  test_probability_speed.rs  test_safe_board.rs  test_utils.rs
base/tests/assets/: test_rmv1_noutf8_but_valid_utf8.rmv  test_rmv1_utf8.rmv  test_rmv1_utf8_invalid.rmv  test_rmv1_utf8_nonascii.rmv  test_rmv2_16px_preflags.rmv  test_rmv2_24px.rmv  test_rmv2_24px_preflags.rmv  test_rmv2_utf8_basic.rmv  test_rmv2_utf8_invalid.rmv  test_rmv2_utf8_nonascii.rmv
c/: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  ms_toollib.h  test.c  test.cpp
c++/: .gitignore  CMakeLists.txt  Dockerfile
c++/src/: main.cpp
c++/src/cxxbridge_code/: Cargo.toml
c++/src/cxxbridge_code/src/: lib.rs
c, c++/: .gitignore  Cargo.toml  ms_toollib.cpp  ms_toollib.h  test.cpp
c, c++/src/: lib.rs
c/include/ms_toollib/: board.h  ms_toollib.h  probability.h  zini.h
c/src/: lib.rs
c/tests/: test_board.c
demos/c/: Makefile  demo.c
demos/java/: Demo.java  Makefile  ms_toollib_MsToollib.h
demos/julia/: callms_toollib.jl
demos/nodejs/: base_video.js  cal_params.js  cal_possibility.js  filter_board.js  index.js  laymine.js  package-lock.json  package.json  parse_avf.js  parse_custom.js  parse_rmv.js  solvable_probability_mines.js  stnb_plot.js
demos/python/: avf2evf.py  base_video.py  basevideo_inherit.py  cal_board_params.py  cal_probability.py  evfs.py  laymine.py  optical_board_recognition.py  parse_avf.py  parse_mvf.py  read_evfs.py  save_to_evfs.py  software_valid_time.py
demos/vue3_ts/: README.md  package-lock.json  package.json  vue.config.js  webpack.config.js
demos/vue3_ts/src/: App.vue
demos/vue3_ts/src/components/: HelloWorld.vue  MinesweeperGame.vue
demos/vue3_ts/src/views/: About.vue
java/: .gitignore  Makefile  build.bat
java/src/main/c/: jni_wrapper.c
java/src/main/java/ms_toollib/: AvfVideo.java  BaseVideo.java  EvfVideo.java  MsToollib.java  MvfVideo.java  RmvVideo.java
python_package/: Cargo.toml  a.bat  ms_toollib.pyi  pyproject.toml  readme.md  打包发布pypi命令.txt
python_package/.cargo/: config.toml
python_package/.github/workflows/: CI.yml
python_package/src/: avf_video.rs  base_video.rs  board.rs  evf_video.rs  evfs.rs  gameboard.rs  lib.rs  mvf_video.rs  rmv_video.rs  videos.rs
test_files/: Cus_8x11_7mines_5.42_3BV=8_3BVs=1.47_Wang Jianing G15208.avf  HI-SCORE Exp_49.25_3BV=127_3BVs=2.57_Wang Jianing G01825.avf  Wang_Jia_Ning_Beg_15.523bv24.avf  Zhang Shen Jia_Exp_38.82(3bv122).mvf  avf_exp_0_48_5.avf  b_0_504.985_10_0.020_匿_fake(wait_500_secs_元3.2.1_in_test_v4).evf  b_5_3.796_3BV=3_3BVs=0.790_王嘉宁(元3.1.9_v3).evf  beg_chinese_name.avf  c_10_1184.575_1021_0.862_Pu Tian Yi(Hu Bei).evf  exp_98763_FL_1738209872.rmv  说明.txt
wasm/: Cargo.toml  LICENSE_APACHE  LICENSE_MIT  README.md
wasm/nodejs/: index.js  package-lock.json  package.json
wasm/src/: algorithms.rs  board.rs  lib.rs  transfor.rs  utils.rs
wasm/www/: LICENSE-APACHE  index.html  index.js  package-lock.json  package.json
