[package]
name = "ms_toollib"
version = "1.5.3"
description = "Algorithms for Minesweeper"
documentation = "https://docs.rs/ms_toollib"
license = "MIT"
readme = "README.md"
keywords = ["minesweeper", "game", "rust", "solver", "algorithm"]
edition = "2021"
authors = ["Wang Jianing <wangjianing@88.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rs"]
js = ["getrandom", "web-sys"]
py = ["rand", "tract-onnx"]
rs = ["rand", "tract-onnx"]

[dependencies.rand]
version = "0.8.3"
optional  = true

[dependencies.getrandom]
version = "0.2.3"
features = ["js"]
optional  = true

[dependencies.web-sys]
version = "0.3.4"
features = ['console']
optional  = true

[dependencies.tract-onnx]
version = "0.21.13"
optional  = true

[dependencies]
itertools = "0.10.3"
encoding_rs = "0.8.35"

[dev-dependencies]
ms_toollib = { path = "." }
bencher = "0.1.5"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "sample_boards"
harness = false

[[bench]]
name = "lay_mine"
harness = false

[[bench]]
name = "refresh_matrix"
harness = false

[profile.release]
opt-level = "z"  # 优化大小
lto = true       # 链接时优化，跨crate优化代码
panic = "abort"  # 禁用恐慌的展开信息
strip = true     # 剥离调试符号


