[project]
name = "ms_toollib"
version = "1.4.14"
description = "Algorithms for minesweeper."
readme = "readme.md"
requires-python = ">=3.7"
keywords = ["minesweeper", "possibility", "solver", "laymine", "3BV"]
authors = [
  {email = "wangjianing@88.com"},
  {name = "Wang Jianing"}
]
maintainers = [
  {name = "Wang Jianing", email = "wangjianing@88.com"}
]
classifier = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Rust",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
project-url = { homepage = "https://github.com/eee555/ms_toollib" }



# dependencies = [
#   "httpx",
#   "gidgethub[httpx]>4.0.0",
#   "django>2.1; os_name != 'nt'",
#   "django>2.0; os_name == 'nt'"
# ]

[project.optional-dependencies]
# test = [
#   "pytest < 5.0.0",
#   "pytest-cov[all]"
# ]

[project.urls]
homepage = "https://github.com/eee555/ms_toollib"
documentation = "https://docs.rs/ms_toollib/latest/ms_toollib"
repository = "https://github.com/eee555/ms_toollib"
# changelog = "github.com/me/spam/blob/master/CHANGELOG.md"

# [project.scripts]
# spam-cli = "spam:main_cli"

# [project.gui-scripts]
# spam-gui = "spam:main_gui"

# [project.entry-points."spam.magical"]
# tomatoes = "spam:main_tomatoes"


[build-system]
requires = ["maturin>=1.4.0"]
build-backend = "maturin"

# [tool.maturin]
# bindings = "cffi"
# compatibility = "linux"




