[package]
name = "ms-toollib"
version = "1.4.12-alpha"
authors = ["eee555 <50390200+eee555@users.noreply.github.com>"]
edition = "2021"
homepage = "https://github.com/eee555/ms-toollib"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.100"
# serde_json = "1.0.59"
# serde = "1.0.130"
js-sys = "0.3.77"
# ms_toollib = { version ="1.3.0", features = ["js"] }
ms = { path = "../base", default-features = false, features = ["js"], package="ms_toollib" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
# lto = true
# opt-level = 'z'

[dependencies.web-sys]
version = "0.3.4"
features = [
  'console',
]
